--- a/index.html
+++ b/index.html
@@ -989,12 +989,17 @@ function showDialogDiv(divid)
 </div>
 <div id="idreferences">
 <h1>The Restore Point Simulator</h1>
-Current version : <a href="#"  onclick="showDialogDiv('idreleasenotes');return false;">0.2.9</a><br> 
+Current version : <a href="#"  onclick="showDialogDiv('idreleasenotes');return false;">0.3.0</a><br> 
 Feedback via <a href="https://twitter.com/intent/tweet?screen_name=tdewin" style="text-decoration:none;">@tdewin</a><br>
 RPS heavily relies on some opensource <a href="#" onclick="showDialogDiv('idjavascript');return false;">javascript frameworks</a><br>
 If you require the old version for some reason, you can find it <a href="http://rps.dewin.me/old">here</a></br>
 </div>
 <div id="idreleasenotes" class="hiddenBlock">
+0.3.0 :
+<ul>
+<li>Renewed merging engine, should mimick more how the production engine works (based on documentation)</li>
+</ul>
+
 0.2.9 :
 <ul>
 <li>Easing function for working space also works for manual mode</li>
