--- a/index.html
+++ b/index.html
@@ -203,8 +203,22 @@ function mappings()
 	}
 	//default uri mappers
 	
-	
 	//defining mappings
+	var setDefaultSelectInt = function() {
+		var scenario = mappingsLocal["scenario"].convert()
+		var value = scenario[this.variable]
+		var jqselect = this.id
+		
+		if ( $(jqselect+" option[value='"+value+"']").length == 0 ){
+			var urioption = new Option("Custom "+value+"%", value)
+			urioption.setAttribute("selected","selected")
+			document.getElementById(jqselect.substring(1)).add(urioption);
+		}
+		else
+		{
+			$(jqselect+" option[value='"+value+"']").prop('selected',true);
+		}
+	}
 	
 	
 	var mappingObj = new mapping("#scenariosSelect","scenario",-1)
@@ -255,19 +269,13 @@ function mappings()
 	mappingObj = new mapping("#idCompression","compression",0)
 	mappingObj.urivar = "c"
 	mappingObj.convert = convertSelectInt
-	mappingObj.setDefault = function() {
-		var scenario = mappingsLocal["scenario"].convert()
-		 $(this.id).val(scenario.compression)
-	}
+	mappingObj.setDefault = setDefaultSelectInt
 	mappingsLocal[mappingObj.variable] = mappingObj	
 	
 	mappingObj = new mapping("#idDelta","changeRate",0)
 	mappingObj.urivar = "d"
 	mappingObj.convert = convertSelectInt
-	mappingObj.setDefault = function() {
-		var scenario = mappingsLocal["scenario"].convert()
-		 $(this.id).val(scenario.changeRate)
-	}
+	mappingObj.setDefault = setDefaultSelectInt
 	mappingsLocal[mappingObj.variable] = mappingObj	
 	
 	//Interval Mapping
@@ -1005,6 +1013,16 @@ $( document ).ready(function() {
 	toggleDataGrowth()
 	
 });
+
+
+
+
+
+
+
+
+
+
 function toggleDataGrowth()
 {
 	var toggle = $('#idDataGrowth').is(':checked')
@@ -1036,34 +1054,10 @@ function showDialogDiv(divid)
 </div>
 <div id="idreferences">
 <h1>The Restore Point Simulator</h1>
-Current version : <a href="#"  onclick="showDialogDiv('idreleasenotes');return false;">0.3.0</a><br> 
+Current version : <a href="release-notes.txt">0.3.1</a><br> 
 Feedback via <a href="https://twitter.com/intent/tweet?screen_name=tdewin" style="text-decoration:none;">@tdewin</a><br>
 RPS heavily relies on some opensource <a href="#" onclick="showDialogDiv('idjavascript');return false;">javascript frameworks</a><br>
-If you require the old version for some reason, you can find it <a href="http://rps.dewin.me/old">here</a></br>
-</div>
-<div id="idreleasenotes" class="hiddenBlock">
-0.3.0 :
-<ul>
-<li>Renewed merging engine, should mimic more how the production engine works (based on documentation)</li>
-</ul>
-
-0.2.9 :
-<ul>
-<li>Easing function for working space also works for manual mode</li>
-</ul>
-
-0.2.8 :
-<ul>
-<li>Easing function for working space</li>
-</ul>
-
-0.2.7 : 
-<ul>
-<li>Added open source reference</li>
-<li>Added css style to all items for more unified view</li>
-<li>Added explanation for events in engine, needs gui</li>
-<li>Changed the default change rate to 10%</li>
-</ul>
+You can find help <a href="help.pdf">here</a></br>
 </div>
 <div id="idjavascript" class="hiddenBlock">
 <ul>
@@ -1114,24 +1108,33 @@ If you require the old version for some reason, you can find it <a href="http://
 				<option value="60">60%</option>
 				<option value="70">70%</option>
 				<option value="80">80%</option>
-				<option value="80">90%</option>
-				<option value="80">100%</option>
+				<option value="90">90%</option>
+				<option value="100">100%</option>
 			</select>
 		</td></tr>
 		<tr><td>Data left after reduction</td><td colspan="2">
 			<!--<input class="alignwidth" type="text" id="idCompression" value="50" ></input>-->
+			<!-- 
+			$step=5;$min=20;$max=100;(0..(($max-$min)/$step)) | % { ($_*$step)+$min } | % { write-host ("<option value=""{0}"">$_% (100GB > {0}GB)</option>" -f $_) } 
+			-->
 			<select id="idCompression" class="alignwidth">
-				<option value="20">20%</option>
-				<option value="30">30%</option>
-				<option value="35">35%</option>
-				<option value="40">40% Optimistic</option>
-				<option value="45">45%</option>
-				<option value="50" selected>50% Conservative</option>
-				<option value="55">55%</option>
-				<option value="60">60%</option>
-				<option value="65">65%</option>
-				<option value="70">70%</option>
-				<option value="80">80%</option>
+				<option value="20">20% (100GB > 20GB)</option>
+				<option value="25">25% (100GB > 25GB)</option>
+				<option value="30">30% (100GB > 30GB) Optimistic</option>
+				<option value="35">35% (100GB > 35GB)</option>
+				<option value="40">40% (100GB > 40GB)</option>
+				<option value="45">45% (100GB > 45GB)</option>
+				<option value="50">50% (100GB > 50GB) Conservative</option>
+				<option value="55">55% (100GB > 55GB)</option>
+				<option value="60">60% (100GB > 60GB)</option>
+				<option value="65">65% (100GB > 65GB)</option>
+				<option value="70">70% (100GB > 70GB)</option>
+				<option value="75">75% (100GB > 75GB)</option>
+				<option value="80">80% (100GB > 80GB)</option>
+				<option value="85">85% (100GB > 85GB)</option>
+				<option value="90">90% (100GB > 90GB)</option>
+				<option value="95">95% (100GB > 95GB)</option>
+				<option value="100">100% (100GB > 100GB) No Compression</option>
 			</select>
 		</td></tr>
 		<tr><td>Interval</td><td colspan="2">
@@ -1156,14 +1159,15 @@ If you require the old version for some reason, you can find it <a href="http://
 				<option value="5" selected >5 Year</option>
 			</select>
 			</td><td class="fixwidthhalf">
+			<!-- 110,120,130,140,150,160,170,180,190,200,210,220,230,240,250,260,270,280,290,300 | % { write-host "<option value=""$_"">$_%</option>" } -->
 			<select id="idDataGrowthRate" class="alignwidth" disabled>
 				<option value="0">0%</option>
 				<option value="5">5%</option>
-				<option value="10">10%</option>
+				<option value="10" selected>10%</option>
 				<option value="15">15%</option>
 				<option value="20">20%</option>
 				<option value="25">25%</option>
-				<option value="30" selected>30%</option>
+				<option value="30">30%</option>
 				<option value="35">35%</option>
 				<option value="40">40%</option>
 				<option value="45">45%</option>
@@ -1178,6 +1182,26 @@ If you require the old version for some reason, you can find it <a href="http://
 				<option value="90">90%</option>
 				<option value="95">95%</option>
 				<option value="100">100%</option>
+				<option value="110">110%</option>
+				<option value="120">120%</option>
+				<option value="130">130%</option>
+				<option value="140">140%</option>
+				<option value="150">150%</option>
+				<option value="160">160%</option>
+				<option value="170">170%</option>
+				<option value="180">180%</option>
+				<option value="190">190%</option>
+				<option value="200">200%</option>
+				<option value="210">210%</option>
+				<option value="220">220%</option>
+				<option value="230">230%</option>
+				<option value="240">240%</option>
+				<option value="250">250%</option>
+				<option value="260">260%</option>
+				<option value="270">270%</option>
+				<option value="280">280%</option>
+				<option value="290">290%</option>
+				<option value="300">300%</option>
 			</select>
 			</td>
 		</tr>
